bf21 work